Add value to control whatsapp usage event name

--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -18,6 +18,8 @@ authgear:
     cronjob:
       enabled: false
       schedule: "0 2 * * *"
+    whatsapp:
+      event: "whatsapp-sent"
 
   configSourceType: "database"
   trustProxy: "true"
