--- a/authgear/templates/usage-record-cronjob.yaml
+++ b/authgear/templates/usage-record-cronjob.yaml
@@ -12,7 +12,7 @@ data:
     authgear-portal usage collect-count active-user this-month
     authgear-portal usage collect-count sms-sent yesterday
     authgear-portal usage collect-count email-sent yesterday
-    authgear-portal usage collect-count whatsapp-sent yesterday
+    authgear-portal usage collect-count {{ include "authgear.usageRecord.whatsapp.event" }} yesterday
 ---
 apiVersion: batch/v1
 kind: CronJob
