--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -15,6 +15,9 @@ authgear:
       schedule: "0 3 * * *"
 
   usageRecord:
+    whatsapp:
+      # whatsapp-sent or whatsapp-otp-verified
+      event: "whatsapp-sent"
     cronjob:
       enabled: false
       schedule: "0 2 * * *"
