--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -66,6 +66,7 @@ data:
                           '$status $body_bytes_sent "$http_referer" '
                           '"$http_user_agent" "$http_x_forwarded_for"';
 
+        server_tokens off;
         access_log  /var/log/nginx/access.log  main;
         sendfile        on;
         keepalive_timeout  65;
