--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -72,6 +72,10 @@ authgear:
   #      enabled: true
   #  certManager:
   #    enabled: true
+  #    issuer:
+  #     name: __replace_me__
+  #     kind: Issuer
+  #     group: cert-manager.io
   #  secretName: ""
 
   smtp:
