--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -107,6 +107,8 @@ spec:
           value: {{ .Values.authgear.trustProxy | quote }}
         - name: CORS_ALLOWED_ORIGINS
           value: {{ include "authgear.portalHost" . | quote }}
+        - name: ALLOWED_FRAME_ANCESTORS
+          value: {{ include "authgear.portalHost" . | quote }}
         {{- if .Values.authgear.imagesServer.cdn.host }}
         - name: IMAGES_CDN_HOST
           value: {{ .Values.authgear.imagesServer.cdn.host | quote }}
