--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -132,6 +132,8 @@ spec:
         {{- range $index, $defaultDomain := .Values.authgear.allDefaultDomains }}
         {{- $suffixes = append $suffixes (printf ".%s" $defaultDomain.domain) }}
         {{- end }}
+        - name: SAML_IDP_ENTITY_ID_TEMPLATE
+          value: {{ .Values.authgear.saml.idpEntityIDTemplate | quote }}
         - name: APP_HOST_SUFFIXES
           value: {{ join "," $suffixes | quote }}
         {{- end }}
