--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -245,8 +245,10 @@ spec:
           value: {{ .Values.authgear.portalServer.adminAPI.endpoint | quote }}
         - name: ADMIN_API_HOST_TEMPLATE
           value: {{ printf "%s.%s" "{{ .AppID }}" .Values.authgear.defaultDomain | quote }}
+        {{- if .Values.authgear.saml.idpEntityIDTemplate }}
         - name: SAML_IDP_ENTITY_ID_TEMPLATE
           value: {{ .Values.authgear.saml.idpEntityIDTemplate | quote }}
+        {{- end }}
         - name: APP_HOST_SUFFIX
           value: {{ printf ".%s" .Values.authgear.defaultDomain | quote }}
         {{- if .Values.authgear.allDefaultDomains }}
