--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -7,6 +7,7 @@ authgear:
   redisURL: redis://localhost
 
   saml:
+    # The default is "urn:{{.app_id}}.localhost"
     idpEntityIDTemplate: ""
 
   stripe:
