Support providing a service account to images server

--- a/authgear/templates/authgear-images-server.yaml
+++ b/authgear/templates/authgear-images-server.yaml
@@ -25,7 +25,9 @@ spec:
       labels:
         {{- include "authgear.imagesSelectorLabels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "authgear.nameMain" . | quote }}
+      {{- if .Values.authgear.imagesServer.serviceAccountName }}
+      serviceAccountName: {{ .Values.authgear.imagesServer.serviceAccountName | quote }}
+      {{- end }}
       volumes:
       {{- if .Values.authgear.appCustomResources.path }}
       - name: custom-resources
