Add missing scheduling fields on analytic hourly and weekly cronjob

--- a/authgear/templates/analytic-cronjob.yaml
+++ b/authgear/templates/analytic-cronjob.yaml
@@ -35,6 +35,25 @@ spec:
       backoffLimit: 0
       template:
         spec:
+          {{- if .Values.authgear.portalServer.nodeSelector }}
+          nodeSelector:
+            {{- .Values.authgear.portalServer.nodeSelector | toYaml | nindent 12 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.nodeName }}
+          nodeName: {{ .Values.authgear.portalServer.nodeName | quote }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.affinity }}
+          affinity:
+            {{- .Values.authgear.portalServer.affinity | toYaml | nindent 12 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.tolerations }}
+          tolerations:
+          {{- .Values.authgear.portalServer.tolerations | toYaml | nindent 10 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.topologySpreadConstraints }}
+          topologySpreadConstraints:
+          {{- .Values.authgear.portalServer.topologySpreadConstraints | toYaml | nindent 10 }}
+          {{- end }}
           containers:
           - name: authgear-analytic-cronjob-hourly
             image: {{ .Values.authgear.portalServer.image | quote }}
@@ -117,6 +136,25 @@ spec:
       backoffLimit: 0
       template:
         spec:
+          {{- if .Values.authgear.portalServer.nodeSelector }}
+          nodeSelector:
+            {{- .Values.authgear.portalServer.nodeSelector | toYaml | nindent 12 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.nodeName }}
+          nodeName: {{ .Values.authgear.portalServer.nodeName | quote }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.affinity }}
+          affinity:
+            {{- .Values.authgear.portalServer.affinity | toYaml | nindent 12 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.tolerations }}
+          tolerations:
+          {{- .Values.authgear.portalServer.tolerations | toYaml | nindent 10 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.topologySpreadConstraints }}
+          topologySpreadConstraints:
+          {{- .Values.authgear.portalServer.topologySpreadConstraints | toYaml | nindent 10 }}
+          {{- end }}
           containers:
           - name: authgear-analytic-cronjob-weekly
             image: {{ .Values.authgear.portalServer.image | quote }}
