--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "authgear.nameMain" . | quote }}
+  {{- if .Values.authgear.mainServer.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml .Values.authgear.mainServer.serviceAccount.annotations | nindent 4 }}
+  {{- end }}
   labels:
     {{- include "authgear.labels" . | nindent 4 }}
 automountServiceAccountToken: true
