--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -156,6 +156,23 @@ authgear:
         mountPath: ""
         volume: {}
 
+  userexport:
+    objectStore:
+      type: ""
+      awsS3:
+        region: ""
+        bucketName: ""
+        accessKeyID: ""
+        secretAccessKey: ""
+      gcpGCS:
+        # This is a new feature, so it does not suppport service account key.
+        bucketName: ""
+        serviceAccount: ""
+      azureBlobStorage:
+        storageAccount: ""
+        container: ""
+        accessKey: ""
+
   mainServer:
     image: __replace_me__
     replicas: 1
